# skyguard

./: ARCHITECTURE.md  BUG_FIXES.md  CLIENT_BRAIN_SYSTEM.md  CLIENT_INTEGRATION.md  HOW_TO_CHANGE_AIRCRAFT_COUNT.md  LANDING_LOGIC.md  README.md  app.js  index.html  style.css  woodwide_controller.py
aviation-mcp/: package-lock.json  package.json  server.ts  stdio.ts  tsconfig.json
client/: .env.example  index.html
client/src/: App.css  App.tsx  index.css  types.ts
client/src/components/: ActiveAircraftPanel.tsx  AnomaliesPanel.css  AnomaliesPanel.tsx  ControlPanel.css  ControlPanel.tsx  MapOverlay.tsx  SkyMap2D.css  SkyMap2D.tsx  SuggestedMessagePanel.css  SuggestedMessagePanel.tsx  TranscriptPanel.css  TranscriptPanel.tsx
client/src/hooks/: useAtcLogs.ts  useSimulationStream.ts
client/src/simulation/: brain.ts  engine.ts  scenarios.ts  types.ts
server/: .env.example  brain.js  index.js  monitor_brain.js  package-lock.json  package.json  simulation.js  test_brain.js  test_client.js  verify_scenario.js
voice-agent-workshop/: pyproject.toml
voice-agent-workshop/livekit-voice-agent/: agent.py  pyproject.toml
